1. Метод .of [#70623] 0 2